@@ -1,6 +1,7 @@
-from paste.httpheaders import USER_AGENT
 from paste.httpheaders import REQUEST_METHOD
 from paste.httpheaders import CONTENT_TYPE
+from paste.httpheaders import USER_AGENT
+from paste.httpheaders import WWW_AUTHENTICATE
 
 import zope.interface
 from repoze.who.interfaces import IRequestClassifier
@@ -51,3 +52,21 @@ zope.interface.directlyProvides(default_request_classifier, IRequestClassifier)
 def default_challenge_decider(environ, status, headers):
     return status.startswith('401 ')
 zope.interface.directlyProvides(default_challenge_decider, IChallengeDecider)
+
+def passthrough_challenge_decider(environ, status, headers):
+    """ Don't challenge for pre-challenged responses.
+
+    o Assume responsese with 'WWW-Authenticate' or an HTML content type
+      are pre-challenged.
+    """
+    if not status.startswith('401 '):
+        return False
+    h_dict = dict(headers)
+    if 'WWW-Authenticate' in h_dict:
+        return False
+    ct = h_dict.get('Content-Type')
+    if ct is not None:
+        return not ct.startswith('text/html')
+    return True
+zope.interface.directlyProvides(passthrough_challenge_decider,
+                                IChallengeDecider)
